--- a/index.html
+++ b/index.html
@@ -1241,16 +1241,15 @@
         <section class="results-section" id="results-section">
             <div class="container">
                 <h2 class="section-title">Loop Results & Previews</h2>
-                <!-- <div id="results-output" class="results-output"></div> -->
                 <div class="iframe-container">
                     <iframe
                         class="result-preview-iframe2"
-                        src="2/README.txt"
+                        src="projects/2/README.txt"
                         title="Brainstorm/Readme Preview"
                     ></iframe>
                     <iframe
                         class="result-preview-iframe"
-                        src="2/index.html"
+                        src="projects/2/index.html"
                         title="Generated HTML Preview"
                     ></iframe>
                 </div>
