--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1 class="hero-title">Unleash Iterative Creativity with autovibe.dev</h1>
+                    <h1 class="hero-title">Unleash Iterative Creativity</h1>
                     <p class="hero-subtitle">
                         Experience rapid-fire thinking in containerized loops, generating thousands
                         of iterations to build anything you can dream up.
@@ -1067,14 +1067,7 @@
                             lightning speed to discover solutions you never imagined.
                         </p>
                     </div>
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-cubes"></i></div>
-                        <h3 class="feature-title">Containerized Power</h3>
-                        <p class="feature-description">
-                            Run flash thinking in isolated containers, providing enterprise-grade
-                            security and consistent performance across all iterations.
-                        </p>
-                    </div>
+
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-seedling"></i></div>
                         <h3 class="feature-title">Seed-Based Creativity</h3>
