--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
             .iframe-container iframe {
                 flex: 1; /* Each iframe takes up equal available space */
                 min-width: 300px; /* Minimum width before wrapping */
-                height: 800px; /* Adjust height as needed */
+                height: 800px; 
                 border: 1px solid var(--light-dark);
                 border-radius: 8px;
                 background-color: #ccc;
@@ -950,10 +950,6 @@
                     gap: 15px;
                 }
 
-                .iframe-container iframe {
-                    height: 600px; /* Adjust height for smaller screens */
-                }
-
                 .cta-title {
                     font-size: 2rem;
                 }
@@ -993,10 +989,6 @@
 
                 .section-title {
                     font-size: 1.8rem;
-                }
-
-                .iframe-container iframe {
-                    height: 500px; /* Further adjust height for very small screens */
                 }
             }
         </style>
